Adjust and style top section

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
         </div>
         <div>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="">link one</a></li>
+                <li><a href="">link two</a></li>
+                <li><a href="">link three</a></li>
             </ul>
         </div>
     </div>
 
+    <div class="container">
     <div class="title">
         <h1>This website is awesome</h1>
         <p>
         This website has some subtext that goes here under the main title. Its smaller font and the color is a lower contrast.
         </p>
-        <button>Sign up</button>
+        <button class="one">Sign up</button>
     </div>
     
     <div class="img">
-        <img src="" alt="">
+        <img class="wedding" src="./img/img1.jpg" alt="couple facing away from camera in wedding outfits">
+    </div>
     </div>
     </div>
 
@@ -60,11 +62,11 @@
         <div>-Thor, God of Thunder</div>
     </div>
 
-        <div class="bottom">
-            Call to action! Its time!
-            <div>sign up for our product by clicking that button right over there!</div>
-            <div><button>Sign up</button></div>
-        </div>
+    <div class="bottom">
+        Call to action! Its time!
+        <p>sign up for our product by clicking that button right over there!<p>
+        <button>Sign up</button>
+    </div>
 
     <div class="footer">
         Copyright &copy The Odin Project 2021
