Adjust and style first middle section

--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
 
     <div class="content">
         <h2>Some random information.</h2>
-        <div>
-            <img src="" alt="">
-            This is some subtext under and illustration or image.
+        <div class="contentBoxes">
+        <div class="boxes">
+            <img class="contentImg" src="" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
         </div>
-        <div>
-            <img src="" alt="">
-            This is some subtext under and illustration or image.
+        <div class="boxes">
+            <img class="contentImg" src="" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
         </div>
-        <div>
-            <img src="" alt="">
-            This is some subtext under and illustration or image.
+        <div class="boxes">
+            <img class="contentImg" src="" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
         </div>
-        <div>
-            <img src="" alt="">
-            This is some subtext under and illustration or image.
+        <div class="boxes">
+            <img class="contentImg" src="" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+        </div>
         </div>
     </div>
 
