--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
 
     <div class="quote">
-        This is an inspiring quote, or a testimonial from a custommer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-        <div>-Thor, God of Thunder</div>
+        <div>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="author">-Thor, God of Thunder</div>
     </div>
 
     <div class="bottom">
