--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
     </div>
 
     <div class="bottom">
-        Call to action! Its time!
-        <p>sign up for our product by clicking that button right over there!<p>
-        <button>Sign up</button>
+        <div class="center">
+            <div>
+                <h3>Call to action! Its time!</h3>
+                <p>sign up for our product by clicking that button right over there!<p>
+            </div>
+            <button class="two">Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
